# setup-SDL-test

./: CMakeLists.txt  main.c
.github/workflows/: homebrew.yml  main.yml  ngage.yml
cmake/: haiku.cmake  mingw64.cmake
